styles.css
:root {
  --primary-color: #3d1766;
  --primary-color-light: #6f1ab6;
  --secondary-color: #ff0032;
  --secondary-color-dark: #cd0404;
  --white: #fafafa;
  --black: #151515;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  font-size: 62.5%;
  font-family: "VT323", monospace;
}
body {
  background-color: var(--primary-color);
}
.game-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  width: 100vw;
  padding: 12px;
}
canvas {
  margin-bottom: 12px;
  border: 4px solid var(--secondary-color-dark);
  border-radius: 15px;
  background: var(--white);
  box-shadow: 20px 20px 30px #250e3e, -20px -20px 30px #55208e;
}
.btns-container {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-template-rows: 2fr 1fr 2fr 1fr 2fr;
  justify-items: stretch;
  margin-bottom: 12px;
  width: 80%;
  max-width: 290px;
  height: fit-content;
}
.btns__btn {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 30px;
  border: 2px solid var(--secondary-color-dark);
  border-radius: 15px;
  font-family: inherit;
  background-color: var(--white);
  box-shadow: 6px 6px 22px #2d114b, -6px -6px 22px #4d1d81;
}
.btns__btn:active {
  background-color: var(--secondary-color);
}
.btns__btn span {
  display: inline-block;
  width: 20px;
  height: 20px;
  background-image: url("./img/up-arrow.png");
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
}
.btns__btn--up {
  grid-column: 3 / 5;
  grid-row: 1 / 2;
}
.btns__btn--left {
  grid-column: 1 / 3;
  grid-row: 3 / 4;
}
.btns__btn--left span {
  transform: rotate(-90deg);
}
.btns__btn--right {
  grid-column: 5 / 8;
  grid-row: 3 / 4;
}
.btns__btn--right span {
  transform: rotate(90deg);
}
.btns__btn--down {
  grid-column: 3 / 5;
  grid-row: 5 / 6;
}
.btns__btn--down span {
  transform: rotate(180deg);
}
.messages {
  display: flex;
  flex-wrap: wrap;
  margin: 0 auto;
  margin-bottom: 12px;
  width: 80%;
  max-width: 460px;
  height: fit-content;
}
p {
  display: block;
  margin: 0;
  width: 100%;
  color: var(--white);
  font-size: 2.5rem;
}
.retry-container {
  display: flex;
  justify-content: center;
  width: 100%;
}
.retry__btn {
  margin: 0 auto;
  width: 40px;
  height: 40px;
  border: 2px solid var(--secondary-color-dark);
  border-radius: 50%;
  box-shadow: 6px 6px 22px #2d114b, -6px -6px 22px #4d1d81;
  background-image: url('./img/refresh.png');
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
}
.retry__btn:active {
  background-color: var(--secondary-color);
}

.inactive {
  display: none;
}

@media (min-width: 425px) {
  p {
    margin-right: 12px;
    width: fit-content;
  }
  .messages__lives span {
    font-size: 2rem;
  }
}
@media (min-width: 748px) {
  .game-container {
    align-items: center;
  }
  canvas {
    margin-right: 12px;
  }
  .messages {
    margin: 0 200px;
    margin-top: 12px;
  }
}

